--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "dom-helpers": "^5.1.3",
+    "material-table": "^1.57.2",
     "mdbreact": "^4.25.3",
-    "react": "^16.12.0",
+    "react": "^16.4.0",
     "react-dom": "^16.12.0",
     "react-images-upload": "^1.2.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-tap-event-plugin": "^3.0.3",
     "recompose": "^0.30.0"
   },
   "scripts": {
