--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "acorn": "^7.1.1",
     "dom-helpers": "^5.1.3",
     "material-table": "^1.57.2",
     "mdbreact": "^4.25.3",
+    "minimist": "^1.2.5",
     "react": "^16.4.0",
     "react-dom": "^16.12.0",
     "react-images-upload": "^1.2.7",
